# rupass

./: CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
scripts/: install-release.mjs  tag.sh
skills/rupass-cli/: SKILL.md
src/: app.rs  app_tests.rs  cli.rs  crypto.rs  git_sync.rs  lib.rs  main.rs  s3_sync.rs  storage.rs  team_sync.rs  tui.rs  tui_actions.rs  tui_app.rs  tui_ops.rs  tui_style.rs  tui_view.rs  ui.rs  ui_api.rs  ui_assets.rs  ui_script.rs  ui_style.rs
