[package]
name = "rupass"
version = "1.0.20"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
hex = "0.4"
rand = "0.8"
ratatui = "0.29"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
